# arabic-digitization

./: .dev.vars.example  .gitignore  README.md  biome.json  design.pen  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  worker-configuration.d.ts  wrangler.jsonc
.claude/skills/arabic-books/: SKILL.md
.github/workflows/: desktop-build.yml  desktop-release.yml
apps/api/: .dev.vars.example  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/api/migrations/: 0001_init_schema.sql  0002_add_usage.sql
apps/api/src/: docs.ts  index.ts  ocr.ts  queue.ts  types.ts
apps/api/src/endpoints/: bookCreate.ts  bookDelete.ts  bookFetch.ts  bookList.ts  bookRequeue.ts  bookStatus.ts  (+8 more)
apps/desktop/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/electron/: main.cjs  preload.cjs
apps/desktop/src/: App.tsx  index.css  main.tsx  theme.ts
apps/desktop/src-tauri/: Cargo.toml  qiraa.desktop  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: README.md  app.json  babel.config.js  eas.json  metro.config.js  package.json  tailwind.config.js
apps/mobile/app/: _layout.tsx  new-book.tsx  scan.tsx
apps/mobile/src/: theme.ts
infra/meili/: README.md  fly.toml  setup-index.mjs
migrations/: 0002_add_ocr_instructions.sql
src/: docs.ts  index.ts  ocr.ts  types.ts
src/endpoints/: bookCreate.ts  bookExport.ts  bookFetch.ts  bookUpdate.ts  fileOcr.ts  fileText.ts  fileUpload.ts
src/middleware/: auth.ts
(+34 files in other folders)
