[package]
name = "qiraa-desktop"
version = "0.0.1"
description = "Qiraa — Arabic manuscript digitization (desktop)"
authors = ["Shunseii"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "qiraa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
